fixing the fixing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -101,13 +101,11 @@ nav {
   text-shadow: 0px 0px 1px #e3d8e3; }
 
 #main {
-  margin: 1em;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; }
+  margin: 1em; }
   @media screen and (min-width: 980px) {
     #main {
       display: flex;
+      justify-content: center;
       align-items: flex-start;
       flex: 1 0 auto; } }
 
@@ -127,30 +125,24 @@ nav {
   justify-content: flex-start;
   align-items: center; }
   .aboutContent h2 {
-    align-self: flex-start;
     color: #652e67;
     font-size: 2em;
-    margin-bottom: 0.5em; }
+    align-self: flex-start; }
   @media screen and (min-width: 980px) {
     .aboutContent {
-      flex: 0 0 50%; } }
+      flex: 0 0 50%;
+      margin-right: 2em; } }
 
-.imgWithText {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-  .imgWithText img {
-    width: 90%;
-    margin-bottom: 0.5em; }
-    @media screen and (min-width: 768px) {
-      .imgWithText img {
-        width: 45%;
-        float: left;
-        margin-right: 1em; } }
-    @media screen and (min-width: 980px) {
-      .imgWithText img {
-        align-self: center;
-        width: 90%; } }
+.imgWithText img {
+  width: 100%; }
+  @media screen and (min-width: 768px) {
+    .imgWithText img {
+      width: 45%;
+      float: left;
+      margin-right: 1em; } }
+  @media screen and (min-width: 980px) {
+    .imgWithText img {
+      width: 100%; } }
 
 aside {
   background-color: #f5f8fa;
@@ -193,7 +185,7 @@ aside {
 .socialMedia-holder {
   position: relative;
   display: inline-block;
-  width: 15em;
+  width: 9.5em;
   height: 2.25em;
   margin: 0.35em 0.1em;
   perspective: 500px; }
@@ -325,16 +317,14 @@ input, textarea {
 
 .projectFrame {
   border: 1px solid green;
-  background-color: #c7c7c7;
-  display: flex;
-  flex-direction: column;
-  padding: 1em; }
+  background-color: #c7c7c7; }
 
 .projectPic {
   display: inline-block;
   box-shadow: 2px 2px 15px 1px #ccc;
   background-color: #e7f3fe;
   position: relative;
+  margin: 1em 0.7em;
   overflow: hidden; }
   .projectPic img {
     width: 100%; }
@@ -342,14 +332,6 @@ input, textarea {
     .projectPic {
       flex-basis: 48%;
       margin: 1em 0em; } }
-
-.projectDesc {
-  display: flex;
-  flex-direction: column; }
-
-.projectLinks ul {
-  display: flex;
-  justify-content: space-around; }
 
 .projectTitleBar0 {
   background-color: #652e67;
