--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,15 +1,21 @@
 * {
   box-sizing: border-box; }
 
-html, body {
-  height: 100%; }
-
 body {
   background-image: url("../images/paper/paper.png");
-  display: flex;
-  flex-direction: column;
   font-family: 'Chivo', 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   line-height: 1.5; }
+
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column; }
+
+.site-content {
+  flex: 1 0 auto; }
+
+.clear {
+  clear: both; }
 
 h1, h2, h3 {
   font-family: 'Asul','Georgia', serif; }
@@ -34,14 +40,12 @@ header {
 .content-header {
   display: flex;
   flex-direction: column; }
-  @media screen and (min-width: 768px) {
+  @media (min-width: 699px) {
     .content-header {
       padding: 0 1em;
       flex-direction: row;
-      justify-content: space-between; } }
-  @media screen and (min-width: 980px) {
-    .content-header {
-      justify-content: space-around; } }
+      justify-content: space-between;
+      align-items: flex-end; } }
 
 .brand {
   display: flex;
@@ -59,10 +63,10 @@ header {
     text-align: center; }
 
 nav {
+  display: flex;
   justify-content: center; }
-  @media screen and (min-width: 620px) {
+  @media (min-width: 699px) {
     nav {
-      display: flex;
       align-items: center; } }
 
 #navLinks {
@@ -73,8 +77,9 @@ nav {
     text-align: center;
     margin: 1em;
     flex-grow: 1; }
-    @media screen and (min-width: 620px) {
+    @media (min-width: 899px) {
       #navLinks li {
+        font-size: 1.2em;
         padding: 0 0.5em; } }
 
 #ihtlogo {
@@ -100,74 +105,44 @@ nav {
   color: #652e67;
   text-shadow: 0px 0px 1px #e3d8e3; }
 
-#main {
-  margin: 1em; }
-  @media screen and (min-width: 980px) {
-    #main {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex: 1 0 auto; } }
-
 .cranky {
   color: #652e67;
   font-weight: bold; }
 
-.aboutContent, aside {
-  margin-top: 2em;
-  box-shadow: inset 0px 0px 25px -2px #97919f; }
+.main {
+  display: flex;
+  padding: 1em;
+  flex-direction: column; }
 
-.aboutContent {
-  background-color: #f5f8fa;
-  padding: 1.5em;
+.imgWithText {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center; }
-  .aboutContent h2 {
-    color: #652e67;
-    font-size: 2em;
-    align-self: flex-start; }
-  @media screen and (min-width: 980px) {
-    .aboutContent {
-      flex: 0 0 50%;
-      margin-right: 2em; } }
+  justify-content: center; }
 
-.imgWithText img {
-  width: 100%; }
-  @media screen and (min-width: 768px) {
-    .imgWithText img {
-      width: 45%;
-      float: left;
-      margin-right: 1em; } }
-  @media screen and (min-width: 980px) {
-    .imgWithText img {
-      width: 100%; } }
+.aboutImg {
+  width: 80%; }
+
+.titleHeader {
+  color: #652e67;
+  font-size: 1.5em; }
 
 aside {
-  background-color: #f5f8fa;
-  padding: 1.5em; }
-  @media screen and (min-width: 980px) {
-    aside {
-      flex: 0 0 18em; } }
+  background-color: #f5f8fa; }
 
 .iconRow ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start; }
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     .iconRow ul {
       justify-content: flex-start; } }
   .iconRow ul li {
     padding: 0 0.4em; }
-    @media screen and (min-width: 980px) {
+    @media (min-width: 980px) {
       .iconRow ul li {
         padding: 0 0.5em; } }
 
-.title h3 {
-  color: #652e67;
-  font-size: 1.5em; }
-.title hr {
+.socialMedia hr {
   border-width: 1px;
   text-align: center; }
 
@@ -185,7 +160,7 @@ aside {
 .socialMedia-holder {
   position: relative;
   display: inline-block;
-  width: 9.5em;
+  width: 10em;
   height: 2.25em;
   margin: 0.35em 0.1em;
   perspective: 500px; }
@@ -264,12 +239,6 @@ aside {
   background: #191919; }
 .socialMedia-holder.codePen:hover .block .socialMediaPlatform {
   background: #595959; }
-
-.content {
-  flex: 1 0 auto; }
-
-.clear {
-  clear: both; }
 
 footer {
   background-color: #c6b1c7;
