--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -109,7 +109,11 @@ header, footer {
 .brand {
 	display:flex;
 	flex-direction: column;
-	justify-content: center;
+  justify-content: center;
+  margin-left: 0%;
+  @media (min-width: 899px){
+    margin-left: 10%;
+  }
 }
 .name {
 	background-color: $eggplant;
@@ -124,9 +128,10 @@ header, footer {
 }
 nav {
 	display: flex;
-	justify-content: center;
-	@media (min-width: 699px){
-		align-items: center;
+  justify-content: center;
+  margin-right: 0%;
+	@media (min-width: 899px){
+    margin-right: 8%;
 	}
 }
 
@@ -167,8 +172,7 @@ nav {
 	text-shadow: 0px 0px 1px rgb(227, 216, 227);
 }
 
-
-.cranky {
+.cranky{
   color: $eggplant;
   font-weight: bold;
 }
@@ -199,10 +203,9 @@ aside, article {
   }
 }
 
-.imgWithText{
-	display:flex;
-	flex-direction: column;
-	align-items: center;
+.bikeImg{
+  width: 80%;
+  margin: 1em auto;
 }
 .aboutImg {
 	width: 80%;
@@ -211,7 +214,12 @@ aside, article {
 	color: $eggplant;
 	font-size: 1.5em;
 }
+.imgWithText {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 
+}
 
 .iconRow {
 	ul {
