--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -26,6 +26,8 @@ h4 {
 
 a {
   text-decoration: none; }
+  a:hover {
+    cursor: pointer; }
 
 p {
   margin: 1em 0.5em; }
@@ -315,17 +317,42 @@ input, textarea {
   background-color: #c6b1c7;
   color: #652e67; }
 
+.portMain {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  width: 100%; }
+  @media (min-width: 899px) {
+    .portMain {
+      flex-direction: row; } }
+
+.portContent {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  flex-basis: 90%; }
+
 .projectHolder {
   display: flex;
-  flex-direction: column; }
-  @media screen and (min-width: 768px) {
+  flex-direction: column;
+  justify-content: flex-start; }
+  @media (min-width: 768px) {
     .projectHolder {
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-between; } }
-  @media screen and (min-width: 980px) {
-    .projectHolder {
-      flex-direction: column; } }
+
+.projectFrame {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  background-color: #ededed;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  padding-bottom: 1em; }
+  @media (min-width: 768px) {
+    .projectFrame {
+      flex-basis: 48%; } }
 
 .projectPic {
   display: inline-block;
@@ -340,6 +367,22 @@ input, textarea {
     .projectPic {
       flex-basis: 48%;
       margin: 1em 0em; } }
+
+.projectDesc {
+  flex: 1; }
+
+.projectLinks {
+  color: #652e67;
+  font-size: 1em; }
+  .projectLinks ul {
+    display: flex;
+    justify-content: space-between; }
+    .projectLinks ul li {
+      font-size: 1.2em;
+      margin-right: 5%;
+      margin-left: 5%; }
+      .projectLinks ul li a {
+        color: #652e67; }
 
 .projectTitleBar0 {
   background-color: #652e67;
