--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,7 +1,7 @@
 
 $lavender: rgb(151, 145, 159);
 $lilac: rgb(198, 177, 199);
-$eggplant: #652e67;
+$eggplant: rgb(101, 46, 103);
 $white: rgb(245, 248, 250);
 $active: rgb(191, 129, 157);
 
@@ -79,7 +79,10 @@ h4 {
 	color: $white;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
+  &:hover{
+    cursor: pointer;
+  }
 }
 p {
 	margin: 1em 0.5em;
@@ -176,7 +179,7 @@ nav {
   color: $eggplant;
   font-weight: bold;
 }
-
+//GUTS
 .main {
 	display: flex;
   padding: 1em;
@@ -188,8 +191,6 @@ nav {
     justify-content: space-between;
   }
 }
-
-
 aside, article {
   background-color: $white;
   margin-bottom: 1em;
@@ -312,8 +313,6 @@ aside, article {
     transform: translateZ(-18px) rotateX(90deg);
   }
 }
-
-
 //apply color mixin:
 .socialMedia-holder {
   &.twitter {
@@ -335,8 +334,6 @@ aside, article {
     @include socialMedia-container($codePen);
   }
 }
-
-
 
 footer {
 	background-color: $lilac;
@@ -373,18 +370,49 @@ input, textarea {
 	background-color: $lilac;
 	color: $eggplant;
 }
+//diff layout for portfolio
+.portMain {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  width: 100%;
+  @media(min-width: 899px){
+    flex-direction: row;
+  }
+}
+.portContent {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  flex-basis: 90%;
+  // @media (min-width: 768px){
+  //   flex-basis: 50%;
+  //   flex-direction: row;
+  //   flex-wrap: wrap;
+  // }
+}
 
 .projectHolder {
 	display:flex;
-	flex-direction: column;
-	@media screen and (min-width: 768px){
+  flex-direction: column;
+  justify-content: flex-start;
+	@media (min-width: 768px){
 		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-between;
 	}
-	@media screen and (min-width: 980px){
-		flex-direction: column;
-	}
+}
+.projectFrame{
+  display:flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  background-color:#ededed;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  padding-bottom: 1em;
+  @media(min-width: 768px){
+    flex-basis: 48%;
+  }
 }
 .projectPic {
 	display: inline-block;
@@ -401,7 +429,25 @@ input, textarea {
 		margin: 1em 0em;
 	}
 }
-
+.projectDesc {
+  flex: 1;
+}
+.projectLinks{
+  ul {
+    display: flex;
+    justify-content: space-between;
+    li {
+      font-size: 1.2em;
+      margin-right: 5%;
+      margin-left: 5%;
+      a {
+        color: $eggplant;
+      }
+    }
+  }
+  color: $eggplant;
+  font-size: 1em;
+}
 .projectTitleBar0 {
 	background-color: $eggplant;
 	opacity: 0.8;
